Update `_test-pubsub-explain` recipe

--- a/p2p-testing/justfile
+++ b/p2p-testing/justfile
@@ -1068,30 +1068,31 @@ _test-pubsub-explain:
     echo -e "  ${BLUE}│${RESET}  → Node 1 publishes to PubSub topic 'doc-sync'   ${BLUE}│${RESET}"
     echo -e "  ${BLUE}│${RESET}  → Gossipsub propagates to all subscribers       ${BLUE}│${RESET}"
     echo -e "  ${BLUE}└─────────────────────────────────────────────────────┘${RESET}"
-    echo ""
-    echo -e "${BOLD}P2P Mesh Network (Full Connectivity):${RESET}"
-    echo ""
-    echo "              HTTP POST ⬇️"
-    echo "              (localhost:5000)"
-    echo "                    │"
-    echo "         ┌──────────▼──────────┐"
-    echo "         │      Node 1         │ 📤 Publisher"
-    echo "         │  (Receives HTTP)    │"
-    echo "         └──────────┬──────────┘"
-    echo "                    │ Gossipsub"
-    echo "            ┌───────┼───────┐"
-    echo "            │       │       │"
-    echo "        ┌───▼───┐ ┌─▼───┐ ┌─▼───┐"
-    echo "        │Node 2 │ │Node3│ │Node4│ 📥 Subscribers"
-    echo "        └───────┘ └─────┘ └─────┘"
-    echo "            │       │       │"
-    echo "            └───────┼───────┘"
-    echo "                    │"
-    echo "            ┌───────┴───────┐"
-    echo "            │               │"
-    echo "        ┌───▼───┐       ┌───▼───┐"
-    echo "        │Node 5 │       │Node 6 │ 📥 Subscribers"
-    echo "        └───────┘       └───────┘"
+    # This is commented since now we're using 12 nodes
+    # echo ""
+    # echo -e "${BOLD}P2P Mesh Network (Full Connectivity):${RESET}"
+    # echo ""
+    # echo "              HTTP POST ⬇️"
+    # echo "              (localhost:5000)"
+    # echo "                    │"
+    # echo "         ┌──────────▼──────────┐"
+    # echo "         │      Node 1         │ 📤 Publisher"
+    # echo "         │  (Receives HTTP)    │"
+    # echo "         └──────────┬──────────┘"
+    # echo "                    │ Gossipsub"
+    # echo "            ┌───────┼───────┐"
+    # echo "            │       │       │"
+    # echo "        ┌───▼───┐ ┌─▼───┐ ┌─▼───┐"
+    # echo "        │Node 2 │ │Node3│ │Node4│ 📥 Subscribers"
+    # echo "        └───────┘ └─────┘ └─────┘"
+    # echo "            │       │       │"
+    # echo "            └───────┼───────┘"
+    # echo "                    │"
+    # echo "            ┌───────┴───────┐"
+    # echo "            │               │"
+    # echo "        ┌───▼───┐       ┌───▼───┐"
+    # echo "        │Node 5 │       │Node 6 │ 📥 Subscribers"
+    # echo "        └───────┘       └───────┘"
     echo ""
     echo -e "  ${BLUE}ℹ️  Each node is connected to all others (30 total connections)${RESET}"
     echo -e "  ${BLUE}ℹ️  Any node can be a publisher - depends on which receives HTTP POST${RESET}"
